add benchmarks for both JSii and Native implementations